Modificati alcuni path dell'API
